--- a/build.gradle
+++ b/build.gradle
@@ -18,11 +18,16 @@ repositories {
 
 dependencies {
     compile 'com.pi4j:pi4j-core:1.2'
+    compile 'com.pi4j:pi4j-device:1.2'
 
     compile 'org.dstadler:commons-dost:1.0.0.31'
     compile 'com.google.guava:guava:29.0-jre'
     compile 'commons-io:commons-io:2.8.0'
     compile 'org.apache.commons:commons-lang3:3.11'
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    testCompile 'org.mockito:mockito-core:3.5.13'
 }
 
 wrapper {
