--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     compile 'com.pi4j:pi4j-device:1.2'
 
     compile 'org.dstadler:commons-dost:1.0.0.31'
+    compile 'org.dstadler:commons-audio:1.0.0.6'
     compile 'com.google.guava:guava:29.0-jre'
     compile 'commons-io:commons-io:2.8.0'
     compile 'org.apache.commons:commons-lang3:3.11'
