Remove "--loop", use omxplayer.bin, adjust logging

--- a/build.gradle
+++ b/build.gradle
@@ -106,5 +106,5 @@ task musicPlayer(type: JavaExec) {
 
     maxHeapSize = '64m'
     main = 'org.dstadler.exit.MusicPlayer'
-    args = [ 'audio/Sherlock is a girl\'s name [s3] l Humor-LJYb9jxQlvA.mp3', 'audio/Evil Laugh.wav-219110.mp3' ]
+    args = [ 'audio/background.mp3', 'audio/test2.mp3', 'audio/Female-shout.wav-218417.mp3', 'audio/test1.mp3' ]
 }
