--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'java'
 apply plugin: 'application'
-apply plugin: 'jacoco'
 
 sourceCompatibility = 1.8
 version = '1.0'
@@ -16,14 +15,18 @@ repositories {
     mavenCentral()
 }
 
+configurations {
+    // some transitive dependencies which should not be needed
+    all*.exclude group: 'org.apache.httpcomponents'
+    all*.exclude group: 'log4j'
+    all*.exclude group: 'net.java.dev.jna'
+}
+
 dependencies {
     compile 'com.pi4j:pi4j-core:1.2'
-    compile 'com.pi4j:pi4j-device:1.2'
+    //compile 'com.pi4j:pi4j-device:1.2'
 
     compile 'org.dstadler:commons-dost:1.0.0.31'
-    compile 'org.dstadler:commons-audio:1.0.0.6'
-    compile 'com.google.guava:guava:29.0-jre'
-    compile 'commons-io:commons-io:2.8.0'
     compile 'org.apache.commons:commons-lang3:3.11'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
@@ -47,17 +50,6 @@ task adjustWrapperPropertiesFile {
 	}
 }
 wrapper.finalizedBy adjustWrapperPropertiesFile
-
-test {
-    systemProperties = System.properties
-
-	// show standard out and standard error of the test JVM(s) on the console
-	testLogging.showStandardStreams = true
-}
-
-jacoco {
-    toolVersion = '0.8.6'
-}
 
 task example(type: JavaExec) {
     classpath = sourceSets.main.runtimeClasspath
