--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ mainClassName = "org.dstadler.exit.ButtonDigitSpinning"
 
 jar {
     manifest {
-        attributes 'Implementation-Title': 'Exit The Room main application', 'Implementation-Version': version
+        attributes 'Implementation-Title': 'Exit The Room main application', 'Implementation-Version': archiveVersion
     }
 }
 
@@ -26,7 +26,7 @@ dependencies {
     compile 'com.pi4j:pi4j-core:1.2'
     //compile 'com.pi4j:pi4j-device:1.2'
 
-    compile 'org.dstadler:commons-dost:1.0.0.32'
+    compile 'org.dstadler:commons-dost:1.0.0.33'
     compile 'org.apache.commons:commons-lang3:3.12.0'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
