--- a/build.gradle
+++ b/build.gradle
@@ -23,15 +23,16 @@ configurations {
 }
 
 dependencies {
-    compile 'com.pi4j:pi4j-core:1.2'
-    //compile 'com.pi4j:pi4j-device:1.2'
+    implementation 'com.pi4j:pi4j-core:1.2'
+    //implementation 'com.pi4j:pi4j-device:1.2'
 
-    compile 'org.dstadler:commons-dost:1.0.0.33'
-    compile 'org.apache.commons:commons-lang3:3.12.0'
+    implementation 'org.dstadler:commons-dost:1.0.0.34'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+	implementation 'org.apache.commons:commons-exec:1.3'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
-    testCompile 'org.mockito:mockito-core:3.12.4'
+    testImplementation 'org.mockito:mockito-core:3.12.4'
 }
 
 wrapper {
