--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,9 @@ apply plugin: 'application'
 
 sourceCompatibility = JavaVersion.VERSION_11
 version = '1.0'
-mainClassName = "org.dstadler.exit.ButtonDigitSpinning"
+application {
+    mainClass = 'org.dstadler.exit.ButtonDigitSpinning'
+}
 
 jar {
     manifest {
