--- a/build.gradle
+++ b/build.gradle
@@ -33,9 +33,11 @@ dependencies {
     implementation 'org.apache.commons:commons-lang3:3.17.0'
 	implementation 'org.apache.commons:commons-exec:1.4.0'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.4'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.4'
-    testImplementation 'org.mockito:mockito-core:5.14.2'
+	testImplementation 'org.mockito:mockito-core:5.17.0'
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.12.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.12.1'
+	testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.12.1'
 }
 
 wrapper {
